--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
     <link
       rel="stylesheet"
-      href="D:\HTML\1st Project\AudiEtronWebsite\Index.html\style.css"
+      href="style.css"
     />
   </head>
   <body>
