--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
     <link
       rel="stylesheet"
-      href="style.css"
+      href="/style.css"
     />
   </head>
   <body>
@@ -17,7 +17,7 @@
     <p>Conclusion</p>
     <em>Description</em>
     <img
-      src="D:\HTML\1st Project\AudiEtronWebsite\img\A244480_web_2880.jpg"
+      src=/A244480_web_2880.jpg"
       alt="Image of Etron"
       width="400"
       align="right"
@@ -45,7 +45,7 @@
     </ul>
 
     <a
-      href="D:\HTML\1st Project\AudiEtronWebsite\img\a-black-and-white-picture-of-the-front-of-an-audi-e-tron-55-quattro-2JB9GEH.jpg"
+      href="/a-black-and-white-picture-of-the-front-of-an-audi-e-tron-55-quattro-2JB9GEH.jpg"
       target="_blank"
     >
       <img
