--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
     <link
       rel="stylesheet"
-      href="/style.css"
+      href="assets/style.css"
     />
   </head>
   <body>
