--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>Conclusion</p>
     <em>Description</em>
     <img
-      src=/A244480_web_2880.jpg"
+      src="assets/img/A244480_web_2880.jpg"
       alt="Image of Etron"
       width="400"
       align="right"
@@ -49,7 +49,7 @@
       target="_blank"
     >
       <img
-        src="D:\HTML\1st Project\AudiEtronWebsite\img\a-black-and-white-picture-of-the-front-of-an-audi-e-tron-55-quattro-2JB9GEH.jpg"
+        src="assets/img/a-black-and-white-picture-of-the-front-of-an-audi-e-tron-55-quattro-2JB9GEH.jpg"
         alt="thumbnail of a cat"
         width="289"
       />
